# gemini-web-summary-tool

./: LICENSE  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/: data.py  main.py
backend/src/ai/: generate.py
backend/src/api/: sources.py  topics.py  websockets.py
browser_extension/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
browser_extension/entrypoints/: background.ts
browser_extension/entrypoints/content/: index.tsx
browser_extension/entrypoints/content/components/: HighlightButton.tsx
browser_extension/entrypoints/content/lib/: backgroundCommunication.ts  domSerialization.ts  highlights.ts
browser_extension/entrypoints/popup/: App.tsx
browser_extension/lib/: browserAPI.ts
frontend/: .prettierrc.js  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: Card.tsx  Header.tsx
frontend/src/components/areas/: SourceArea.tsx  ViewArea.tsx
frontend/src/components/views/: TextView.tsx  View.tsx
frontend/src/lib/: backend.ts  topicState.ts
frontend/src/routes/: index.tsx
